# xarray_loader

./: .pre-commit-config.yaml  README.md  __init__.py  custom_collate_fn.py  get_fcst_and_truth.py  load_zarr.py  normalise.py  pyproject.toml  test_xbatcher.ipynb  torch_batcher.py  utils.py
xarray_batcher/: .gitignore  TFbatcher.py  batch_helper_functions.py  create_npz.py  custom_collate_fn.py  get_fcst_and_truth.py  loading.py  normalise.py  setup_data.py  torch_batcher.py  utils.py
xarray_batcher/experimental_tensorflow/: TFbatcher.py  load_zarr_gfs.py
